--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,10 @@ on:
 #   1. 每天 00:00 UTC 时间执行
   schedule:
     - cron: '0 0 * * *'
+#   2. 每次 push 到 master 分支时执行
+  push:
+    branches:
+    - master
 
 jobs:
 
