--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,14 +17,26 @@ jobs:
         steps:
           - name: Checkout code
             uses: actions/checkout@v4
+          # 安装 WireGuard
+          - name: Install WireGuard
+            run: sudo apt-get update && sudo apt-get install -y wireguard
+          
+
+          - name: Write WireGuard Config
+            run: echo "${{ secrets.WG_CONFIG }}" | base64 -d > /tmp/wg0.conf
+    
+          - name: Display WireGuard Config
+            run: cat /tmp/wg0.conf
+    
           - name: Set up WireGuard Connection
-            uses: Cardtonic-Technologies/ttt-wireguard@main
-            with:
-              WG_CONFIG: ${{ secrets.WG_CONFIG }}
-      
+            run: |
+              sudo ip link add wg0 type wireguard
+              sudo wg setconf wg0 /tmp/wg0.conf
+              sudo ip link set wg0 up
+    
           # 等待 5 个小时
           - name: Wait 4h no1
-            run: ping -c 720 10.0.8.4
+            run: ping  10.0.8.4
 
           # 再等待 4 个小时
           - name: Wait 4h no2
