--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
             run: |
               sudo ip link add wg0 type wireguard
               sudo wg setconf wg0 /tmp/wg0.conf
+              sudo ip address add 10.0.8.10/24 dev wg0
               sudo ip link set wg0 up
     
           # 等待 5 个小时
