--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,20 +20,22 @@ jobs:
           # 安装 WireGuard
           - name: Install WireGuard
             run: sudo apt-get update && sudo apt-get install -y wireguard
-          
-
-          - name: Write WireGuard Config
-            run: echo "${{ secrets.WG_CLIENT }}" | base64 -d > /tmp/wg0.conf
-    
-          - name: Display WireGuard Config
-            run: cat /tmp/wg0.conf
-    
-          - name: Set up WireGuard Connection
+        
+          - name: Set up WireGuard Interface
             run: |
               sudo ip link add wg0 type wireguard
-              sudo wg setconf wg0 /tmp/wg0.conf
               sudo ip address add 10.0.8.10/24 dev wg0
               sudo ip link set wg0 up
+              sudo wg set wg0 private-key ${{ secrets.PRIVATE }}
+
+          - name: Set up WireGuard Peer
+            run: |
+              sudo wg set wg0 peer ${{ secrets.ENDPOINT_PUBLIC }} allowed-ips
+              allowed-ips 10.0.8.4/32 \
+              endpoint ${{ secrets.ENDPOINT }} \
+              persistent-keepalive 25
+
+              
     
           # 等待 5 个小时
           - name: Wait 4h no1
