--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,13 @@ jobs:
               sudo iptables -A FORWARD -i wg0 -j ACCEPT
               sudo iptables -A FORWARD -o wg0 -j ACCEPT
               sudo iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
-    
+          
+          - name: Enable IP Forwarding
+            run: |
+                echo 1 | sudo tee /proc/sys/net/ipv4/ip_forward
           # 等待 5 个小时
           - name: Wait 4h no1
-            run: ping  10.0.8.4
+            run: ping -c 4 10.0.8.4
 
           # 再等待 4 个小时
           - name: Wait 4h no2
