--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,6 @@ jobs:
     
           - name: Start OpenVPN
             run: sudo openvpn --config client.ovpn &
+
+          - name: ping
+            run: ping -c 5 192.168.10.1
