--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,9 +44,9 @@ jobs:
 
           - name: Setup WireGuard Config
             run: |
-              sudo ip link add dev wg0 type wireguard
-              sudo ip address add dev wg0 10.0.8.4/24
-              sudo wg set wg0 listen-port 39815
+              sudo ip link add  wg0 type wireguard
+              sudo ip address add  wg0 10.0.8.10/24
+              sudo wg set wg0 listen-port 51820
               sudo wg set wg0 private-key private.key
           - name: Add Peer
             run: |
@@ -56,14 +56,14 @@ jobs:
                persistent-keepalive 25 
 
           - name: Up WireGuard
-            run: sudo ip link set up dev wg0
+            run: sudo ip link set wg0 up
           
           - name: setup Forwarding
             run: |
-              sudo iptables -A FORWARD -i %i -j ACCEPT
-              sudo iptables -A FORWARD -o %i -j ACCEPT
+              sudo iptables -A INPUT -p udp --dport 51820 -j ACCEPT
+              sudo iptables -A FORWARD -i wg0 -j ACCEPT
+              sudo iptables -A FORWARD -o wg0 -j ACCEPT
               sudo iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE
-
 
 
 
