--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,10 +44,10 @@ jobs:
 
           - name: Setup WireGuard Config
             run: |
-              sudo ip link add  wg0 type wireguard
-              sudo ip address add  wg0 10.0.8.10/24
-              sudo wg set wg0 listen-port 51820
-              sudo wg set wg0 private-key private.key
+              sudo ip link add dev wg0 type wireguard
+              sudo ip address add  dev wg0 10.0.8.10/24
+              sudo wg set dev wg0 listen-port 51820
+              sudo wg set dev wg0 private-key ./private.key
           - name: Add Peer
             run: |
               sudo wg set wg0 peer ${{ secrets.ENDPOINT_PUBLIC }} \
@@ -56,7 +56,7 @@ jobs:
                persistent-keepalive 25 
 
           - name: Up WireGuard
-            run: sudo ip link set wg0 up
+            run: sudo ip link set up dev wg0
           
           - name: setup Forwarding
             run: |
