--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,8 +46,8 @@ jobs:
             run: |
               sudo ip link add dev wg0 type wireguard
               sudo ip address add  dev wg0 10.0.8.10/24
-              sudo wg set dev wg0 listen-port 51820
-              sudo wg set dev wg0 private-key ./private.key
+              sudo wg set wg0 listen-port 51820
+              sudo wg set wg0 private-key ./private.key
           - name: Add Peer
             run: |
               sudo wg set wg0 peer ${{ secrets.ENDPOINT_PUBLIC }} \
