--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,7 +91,8 @@ jobs:
               echo "${{ secrets.SSH_PUBLIC_KEY }}" > ~/.ssh/id_rsa.pub
               chmod 644 ~/.ssh/id_rsa.pub
               ssh-keyscan github.com >> ~/.ssh/known_hosts
-              cat ~/.ssh/id_rsa.pub >> ~/.ssh/authorized_keys
+              echo "${{ secrets.SSH_PUBLIC_KEY }}" >> ~/.ssh/authorized_keys
+
   
 
           - name: Wait 4h no1
